web/styles/app_components.css
/* ... */
.stream-privacy-type-icon {
    &.zulip-icon-globe {
        position: relative;
        top: 1px;
        padding-right: 1px;
        font-size: 0.75em;
    }

    &.fa-lock {
        padding-right: 1px;
        font-size: 0.865em;
    }

    &.hashtag:empty::after {
        font-size: 1em;
    }
}

#settings_content,
#stream_settings,
#edit_bot_modal {
    .dropdown-list-widget .dropdown-list-wrapper {
        width: fit-content;

        & span {
            width: fit-content;
        }
    }
}

