settings: Fix dropdown-list-widget menu for short options.
The dropdown menu for notification stream, default code block
language, etc. was not looking good for short options due to
width being set to fit-content. This commit adds min-width
property to make them look good for short options as well.

--- a/web/styles/app_components.css
+++ b/web/styles/app_components.css
@@ -850,6 +850,7 @@ div.overlay {
         width: fit-content;
 
         & span {
+            min-width: 210px;
             width: fit-content;
         }
     }
